Clean up notebook

--- a/examples/notebooks/data.ipynb
+++ b/examples/notebooks/data.ipynb
@@ -7,8 +7,8 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "from typing import List\n",
     "from torch_geometric.data import InMemoryDataset"
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        " ['Welcome', 'to', 'the', 'dog', 'days', 'of', 'summer']]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,31 +107,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
-    "onehot_encoded = one_hot_encode(tokenized[1])"
+    "onehot_encoded = one_hot_encode(tokenized[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "one_hot_token = token_to_one_hot(tokenized[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0]])"
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0])"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 261,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one_hot_token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The'"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one_hot_word_to_token(one_hot_token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1],\n",
+       "       [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
+       "       [0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,51 +193,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sentence = decode_one_hot(onehot_encoded)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Welcome', 'to', 'the', 'dog', 'days', 'of', 'summer']"
+       "['The', 'quick', 'brown', 'fox', 'jumped', 'over', 'the', 'lazy', 'dog']"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sentence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(7, 14)"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "onehot_encoded.shape"
+    "decode_one_hot(onehot_encoded)"
    ]
   },
   {
